--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "redux": "^3.6.0",
+    "revue": "^3.0.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
