--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.1",
     "revue": "^3.0.0",
